--- a/angular.json
+++ b/angular.json
@@ -122,8 +122,13 @@
               "devServerTarget": "myma:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "myma"
 }
