--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,22 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-      
+        
+        
+    - name: Cache node modules
+      uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+             
     - name: Prepare and deploy
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        npm install
+        npm ci
+        # npm install
         # npm run lint
         ###
         # Configure Angular first!
