--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "myma",
   "version": "0.0.0",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,8 +21,12 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@types/jquery": "^3.3.34",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "nodemailer": "^6.4.6",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "smoothscroll-polyfill": "^0.4.4",
